--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "body-parser": "~1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^5.0.1",
     "express": "^4.15.5",
+    "express-jwt": "^5.3.0",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.1.1",
     "mongoose": "^4.13.9",
     "morgan": "~1.9.0",
     "nodemon": "^1.14.3",
     "npm": "^5.6.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "request": "^2.83.0",
     "serve-favicon": "~2.4.5",
     "uglify-js": "~2.6.0"
